--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
     <div class="row">
         <div class="col-md-12">
             <div class="row">
-                <div class="col-md-6 nom ">
-                    <h3>
-                        ABARCA
-                    </h3>
+                <div class="col-md-6 nom py-4 ">
                     <h3>BERYL</h3>
+
+                   <h3><span id="nom-fam" >ABARCA</span></h3>
+
                 </div>
                 <div class="col-md-6 nomdroite">
                     <ul class="point">
                         <li class="list-item">
-                            Concepteur graphique
+                            Développeur web
                         </li>
                         <li class="list-item1">
                           <hr> Ingénieur UI/UX
                         </li>
                         <li class="list-item">
-                           <hr>Développeur
+                           <hr>Informaticienne
                         </li>
                     </ul>
                 </div>
@@ -37,12 +37,12 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6 profil">
+        <div class="col-md-6 profil py-2">
             <h3>
             PROFIL
             </h3>
         </div>
-        <div class="col-md-6 contact">
+        <div class="col-md-6 contact py-2">
             <h3>
                CONTACT
             </h3>
@@ -54,17 +54,17 @@
                 <div class="col-md-6">
 
                     <p>
-                        Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                        Je suis actuellement en formation développeur web et mobile.
                     </p>
 
                 </div>
                 <div class="col-md-6 numero">
                     <ul class="sans">
                         <li class="list-item">
-                            <i class="bi bi-phone-fill">0783642562</i>
+                            <i class="bi bi-phone">0783642562</i>
                         </li>
                         <li class="list-item">
-                            <i class="bi bi-envelope"> abarcaberyl@gmail.com</i>
+                            <i class="bi bi-envelope"></i><a href="https://mail.google.com">abarcaberyl@gmail.com</a>.
                         </li>
 
                     </ul>
@@ -73,12 +73,12 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6 exp">
+        <div class="col-md-6 exp py-2">
             <h3>
           EXPERIENCE
             </h3>
         </div>
-        <div class="col-md-6 comp">
+        <div class="col-md-6 comp py-2">
             <h3>
                 COMPETENCES
             </h3>
@@ -131,11 +131,12 @@
                            PHP
                         </li>
                     </ul>
-                    <div class="col-md-6 form ">
+                    <div class="row">
+                        <div class="col-md-6 form ">
                         <h3>
                             FORMATION
                         </h3>
-
+                        </div>
                     </div >
 
                     <div class="col-md-6 ">
