--- a/index.html
+++ b/index.html
@@ -21,17 +21,8 @@
 
                 </div>
                 <div class="col-md-6 nomdroite">
-                    <ul class="point">
-                        <li class="list-item">
-                            Développeur web
-                        </li>
-                        <li class="list-item1">
-                          <hr> Ingénieur UI/UX
-                        </li>
-                        <li class="list-item">
-                           <hr>Informaticienne
-                        </li>
-                    </ul>
+                 <h1>Développeur Web</h1>
+                 <h4>front-end et back-end </h4>
                 </div>
             </div>
         </div>
@@ -87,6 +78,7 @@
 
 
     </div>
+    
     <div class="row">
         <div class="col-md-12">
             <div class="row haut">
@@ -130,6 +122,12 @@
                         <li class="list-item">
                            PHP
                         </li>
+                        <li class="list-item">
+                            MySQL
+                         </li>
+                        <li class="list-item">
+                            Laravel
+                         </li>
                     </ul>
                     <div class="row">
                         <div class="col-md-6 form ">
@@ -142,7 +140,7 @@
                     <div class="col-md-6 ">
                     <h6>Développement web</h6>
                     2021 <br>
-                    html,php,javascript,php,bootstrap<br>
+                    Html,css,php,javascript,bootstrap,MySQL<br>
                     <hr>
                     <h6>CAP petite enfance</h6>
                     2015 <br>
